# ConcatMap

./: .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  concatmapper.py  mapped.sam  plasmid.fasta  pyproject.toml  requirements.txt  sample_plasmid_circular.fastq  setup.cfg  setup.py  simulate_plasmid_reads.py
ConcatMap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adr/: 0001-depth-via-samtools-subprocess.md  0002-secondary-vs-supplementary-filtering.md  0003-overlong-clip-skip-vs-cap.md  0004-min-length-boundary-inclusive.md  0005-SamFileRead-getEndpoints-method-impl.md  0006-read-segment-dispatch-in-struct.md
scripts/: generate_synthetic_data.py  plot_depth.R  plot_plasmid_colormap.py  plot_reads_colored_by_coverage.py  plot_test.py
src/concatmap/: __init__.py  cli.py  mapper.py  plot.py  struct.py  typing.py  utils.py
synthetic_reads/: pChlamy_L4417_PCR_Product.fasta  plasmid_circular.fastq  plasmid_linearized.fasta  plasmid_linearized.fastq  test_reads.fastq  test_ref.fasta
test/: test_mapper.py  test_placeholder.py  test_plot.py  test_struct.py  test_utils.py
