[build-system]
requires = ['setuptools>=78.1.1', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'concatmap'
version = '2.0.0'
authors = [
    {name = 'Daryl Gohl'},
    {name = 'Paul W. Egeler, M.S.'},
]
description = 'A program to map and plot reads against a circular reference.'
license = 'MIT'
requires-python = '>=3.12'
dynamic = ['readme']
dependencies = [
    'biopython>=1.87',
    'matplotlib>=3.5.1',
    'numpy>=1.21.5',
    'pysam>=0.19.1'
]

[project.optional-dependencies]
dev = [
    'isort==5.12.0',
    'pre-commit==3.5.0',
    'pylint==4.0.6',
    'pyrefly==1.1.1',
    'pytest==9.0.3',
]

[external]
dependencies = [
    'dep:github/lh3/minimap2'
]

[project.urls]
Homepage = 'https://github.com/darylgohl/ConcatMap'
Issues = 'https://github.com/darylgohl/ConcatMap/issues'

[project.scripts]
concatmap = 'concatmap.cli:main'

[tool.setuptools.dynamic]
readme = {file = ['README.md'], content-type = 'text/markdown'}

[tool.isort]
force_single_line = true

[tool.yapf]
based_on_style = 'pep8'

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
