[metadata]
name = ConcatMap
version = 1.0.0
author = Daryl Gohl
author_email = dmgohl@umn.edu
description = A program to map and plot reads against a circular reference.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darylgohl/ConcatMap
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
py_modules = concatmapper
install_requires =
    biopython>=1.79
    matplotlib>=3.5.1
    scipy>=1.7.3
    numpy>=1.21.5
    pysam>=0.19.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    concatmap = concatmapper:main
